objects/Threshold__c.object
<CustomObject>
    <description>This object captures the thresholds for notifications to specify when they should fire.</description>
    <fields>
        <fullName>Consecutive__c</fullName>
        <description>This is the number of consecutive non-present attendance records.</description>
        <label>Consecutive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative__c</fullName>
        <description>This field captures the cumulative number of non-present attendance records.</description>
        <label>Cumulative</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>Thresholds</relationshipLabel>
        <relationshipName>Thresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Lost__c</fullName>
        <description>This is the time lost for the notification period.</description>
        <inlineHelpText>In Minutes.</inlineHelpText>
        <label>Time Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Threshold</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>